--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ torchaudio>=2.0.0
 
 # Multi-objective optimization
 pymoo>=0.6.0
+numba>=0.62.1
 
 # Data processing and visualization
 matplotlib>=3.5.0
